fixing so much spacing and positioning

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -6,12 +6,13 @@
 :root {
   --red: #cc232a;
   --pink: #b57d7f;
+
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 body {
   min-width: 100%;
   min-height: 100vh;
-  overflow: hidden;
   background: #f2888b;
 }
 
