--- a/src/styles/result.scss
+++ b/src/styles/result.scss
@@ -4,12 +4,13 @@
 
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: top;
 
   font-size: 20px;
   font-weight: bold;
 
   &__link {
     text-align: center;
+    margin-top: 30vh;
   }
 }
